# WinToolbox

./: .gitignore  README.md  WinToolbox.spec  __init__.py  app.py  pyproject.toml  run_admin.bat
hooks/: hook-pyzbar.py
services/: __init__.py  hosts.py  network.py  route.py  settings.py  tools.py
ui/: __init__.py  main_window.py
ui/tabs/: __init__.py  about.py  base.py  hosts.py  ip.py  qrcode.py  route.py  settings.py  shortcut.py  sysinternals.py
utils/: __init__.py  admin.py  logger.py  system.py
