[project]
name = "WinToolbox"
version = "1.0.0"
description = "Windows 系统工具箱 - 基于 Python + tkinter 的 GUI 工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "YongboStudio" }
]
keywords = ["windows", "system", "management", "gui", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

# 项目依赖
dependencies = [
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",  # 打包为 exe
    "ruff>=0.1.0",         # 代码检查
    "mypy>=1.0.0",         # 类型检查
]

[project.scripts]
WinToolbox = "WinToolbox.app:main"

[project.gui-scripts]
WinToolbox-gui = "WinToolbox.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["WinToolbox"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

# 默认使用腾讯云源，加速依赖安装
[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
name = "tencent"
default = true

# 备用：阿里云源
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
name = "aliyun"
default = false

# 备用：清华源
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
name = "tsinghua"
default = false

# 官方 PyPI 源
[[tool.uv.index]]
url = "https://pypi.org/simple"
name = "pypi"
default = false
